ARROW-3700: [C++] Ignore empty lines in CSV files

The option is configurable, as it may be legitimate to parse empty lines
as null values in a single-column CSV file (though that's probably uncommon).